--- a/style.css
+++ b/style.css
@@ -1402,12 +1402,48 @@ body.dark #song-strumming span.bass {
   }
 
   .feature-item {
-    width: calc(100% - 32px); /* компенсируем отступы */
+    width: calc(100% - 32px); 
     max-width: 420px;
     margin-left: auto;
     margin-right: auto;
   }
 }
 
+.review {
+  padding: 12px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.1);
+}
+
+.review input[type="checkbox"] {
+  transform: scale(1.3);
+  margin-right: 8px;
+}
+
+.btn.danger {
+  background: #b71c1c;
+  color: #fff;
+  padding: 10px 16px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+.admin-logout {
+  display: block;
+  margin: 60px auto 30px;
+  padding: 14px 26px;
+  font-size: 16px;
+  border: none;
+  border-radius: 12px;
+  background: #b71c1c;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+}
+
+.admin-logout:hover {
+  background: #d32f2f;
+}
 
 
